@@ -161,6 +161,7 @@ Version 1.3
    xs4 (Justin)
  - Fixed issue #586 - Compile Error on newer GCC's (Justin)
  - Fixed issue #568 - Compile Error on new OSX (Justin)
+ - Update the device_classes.xml with the latest known mappings (Justin)
 
 Version 1.2 
  - Released on 15/10/14
